# .env

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  git-watch.service  test.txt
.zsh/: .zcompdump  .zshrc
.zsh/.hist/: .histfile
.zsh/completions.usr/: _docomxc  _ncdu  _questionmark  _update-alternatives
.zsh/configuration/: aliases.zsh  func.zsh  setopts.zsh  variables.zsh
allconfig/: data
allconfig/.local/: nvim.last  nvim.latest
allconfig/.wezterm/: .wezterm.lua
allconfig/.zsh/: .zcompdump  .zshenv  .zshrc
allconfig/.zsh/.hist/: .histfile
allconfig/.zsh/completions.usr/: _docom
allconfig/.zsh/configuration/: aliases.zsh  func.zsh  variables.zsh
allconfig/.zsh/scripts/: mknew-c
allconfig/LazyVim/: lazy
allconfig/cnvim/lua/: test_2754.lua
allconfig/hypr/: hyprland.conf  hyprpaper.conf
allconfig/kitty/: kitty.conf
allconfig/nvim/: .emmyrc.json  CMakeLists.txt  compile_commands.json  dev  github_dark_default.lua  init.lua  lazy-lock.json  main.c  pconf.nvim
allconfig/nvim.b/lua/: options.lua
allconfig/nvim.b/lua/plugins/: lsp.lua
allconfig/nvim.b/nvim/: lazy-lock.json
allconfig/nvim.b/nvim.last/: init.lua
allconfig/nvim.b/nvim.latest/: lazy-lock.json
allconfig/nvim.b/nvim.latest/lua/: mappings.lua
allconfig/nvim.b/nvim.latest/testarea/: CmakeLists.txt
allconfig/nvim.b/nvim/lua/: Zetup.lua
allconfig/nvim.backup/lua/: afterconfig.lua  init_lsp.lua
allconfig/nvim.backup/lua/functions/: hl_setter.lua  inspect.lua  jump_to_closing.lua  logger.lua
allconfig/nvim.backup/lua/options/: mappings.lua
allconfig/nvim.backup/lua/pconfig/: blink.lua  ccc.lua  telescope.lua  treesitter.lua  which-key.lua
allconfig/nvim.backup/other/funcs/: linejump.lua  quotejump.lua
allconfig/nvim.backup/other/lsp.old/: luals.lua
allconfig/nvim.backup/test/: c.nvim
allconfig/nvim.last/lua/configs/: lazy.lua  treesitter.lua
allconfig/nvim.last/lua/custom/: mappings.lua  options.lua
allconfig/nvim.last/lua/funcs/: myNvimTree.lua
allconfig/nvim.latest/lua/configs/: lspconfig.lua
allconfig/nvim.nvchad/lua/: hlConfig.lua  mappings.lua  options.lua
allconfig/nvim.nvchad/lua/configs/: lspconfig.lua
allconfig/nvim.nvchad/lua/plugins/: init.lua
allconfig/nvim.old/: lazy-lock.json
allconfig/nvim.old/lua/: options.lua
allconfig/nvim.old/lua/configs/: lspconfig.lua  treesitter.lua
allconfig/nvim/lua/: PluginConfigImporter.lua  Zetup.lua  afterconfig.lua  chadrc.lua  init_lsp.lua  keymaps.lua  lazy-nvim.lua  lazy.nvim  mappings.lua  mytypes.lua  options.lua  tokyonight.nvim
allconfig/nvim/lua/config/: config.lua  lazy.lua
allconfig/nvim/lua/configs/: cmpcfg.lua  conform.lua  lspconfig.lua  mason.lua  nvimtree.lua  treesitter.lua  ui.lua
allconfig/nvim/my_snippets/: lua.lua
allconfig/nvim/test/: compile_commands.json  main.c  test.lua
allconfig/vscode/: settings.json
allconfig/vscode/snippets/: c.json  json.json  jsonc.json
allconfig/vscode/unix/: settings.json
allconfig/waybar/: config.jsonc
allconfig/yazi/: keymap.toml  package.toml  yazi.toml
allconfig/yazi/scripts/: yazi
c/: .clangd  CMakeLists.txt  main  make  q
c/.cache/clangd/index/: curling.c.435458B5A640BDBC.idx  curling.h.45196B2FBA9DEEA9.idx  jsson.c.C3A260B9EB67C363.idx  main.c.147FC1E0DA678D14.idx  utils.c.B36096F8B341B887.idx  utils.h.FAD90DB25125D574.idx
c/1/: guessgame  guessgame.c  main  smallt.c  task.c
c/api/: CMakeLists.txt  compile_commands.json
c/api/src/: main.c
c/c.nvim/: main.c  maintest  maintest.c  nvim  nvim.c  test  test.c  test1.c
c/c.nvim/clua/: CMakeLists.txt  compile_commands.json  fnames.c  fnames_1.c
c/c.nvim/clua/test/: CMakeLists.txt  main.c
c/c.nvim/openai/: CMakeLists.txt
c/c.nvim/openai/src/: main.c
c/pointers/: main  main.c
c/safeprintf/: CMakeLists.txt
c/safeprintf/src/: safeprintf.c
c/src/: curling.c  curling.h  jsson.c  jsson.h  main.c  test.c  utils.c  utils.h
c/test/: getc.c  line.c  main  main.c  size  size.c  test.c
c/v2/: CMakeLists.txt  compile_commands.json  make.sh  test  test.c  test.h  test1.c
c/v2.v1/: CMakeLists.txt  compile_commands.json  handleinterupt.c  launch.json  make.sh  test
c/v2.v1/src/: compile_commands.json  main.c  utils.c
c/v2/res/: allgamedataOTHER0.json  itempretty.json
c/v2/src/: compile_commands.json  curling.c  jsson.c  main.c  sighandle.c  test.c  tui.c  utils.h
c/v2/src/.cache/clangd/index/: curling.c.3D91B30B124CFAA8.idx  main.c.14CCAAF772E399B8.idx  utils.h.58EF7E988A67DCA2.idx
c/v2/test/: test.c
cTest/: CMakeLists.txt  main  main.c
lol/: CMakeLists.txt  cert.pem  key.pem
lol/debug/: champData copy.json  player1.json  player10.json  player2.json  player3.json  player4.json  player5.json  player6.json  player7.json  player8.json  player9.json
lol/debug copy/: player1.json  player10.json  player2.json  player3.json  player4.json  player5.json  player6.json  player7.json  player8.json  player9.json
lol/lol/res/: allgamedata5.json
lol/lol/src/: server.py
lol/res/: allgamedata (1).json  allgamedata.json  allgamedata2.json  allgamedata3.json  allgamedata4.json  allgamedata5.json  allgamedata6.json  allgamedata6_1.json  allgamedataOTHER.json  allgamedataOTHER0.json
lol/src/: main.c  main.py  server.py
school/: main  run.sh
school/challenges/: reverse.c  text.txt
school/exam/: main.c
school/include/: utils.h
school/src/: arg.c  getc.c  main.c  rec.c  recarea.c  rgb.c  scanf.c  sum.c  t.c  test.c  tw.c  wee.c  week.c
school/w2/: main  main.c  main1  main1.c  test1  test1.c  test2  test2.c  test3  test3.c  test4  test4.c
school/w2/d/: DigitCheck  DigitCheck.c  MultiBranching  MultiBranching.c
school/w2/finaltest/: day  day.c  vowel  vowel.c
school/w3/: Compass.c  DoubleLoop.c  OddOrJump.c  TempArray.c  arr10.c  countL.c  firstdigit.c  guess.c  looparr.c  max.c  primenum.c  soae.c  soen.c
schoolwsl/: getc  if  main  reverse  run.sh  scanf
schoolwsl/src/: if.c  json.c  main.c  reverse.c
vscode/: settings.json
vscode/snippets/: json.json  jsonc.json
vscode/unix/: settings.json
(+121 files in other folders)
